@@ -1,32 +1,45 @@
+import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
 
 public class Mod {
     public String name;
     public String filename;
     public String hash;
-    public String download;
+    private String download;
     public boolean server;
+    public boolean curseforge;
 
     public Mod(String name, String filename, String hash, String download, boolean server, boolean curseforge) {
         this.name = name;
         this.filename = filename;
         this.hash = hash;
+        this.download = download;
         this.server = server;
+        this.curseforge = curseforge;
+    }
 
-        if (curseforge) {
-            String modID = download.substring(0, 4);
-            String fileID = download.substring(4);
+    public String getDownload() {
+        if (this.curseforge) {
+            String IDs = download.split("/")[0];
+            String modID = IDs.substring(0, 4);
+            String fileID = IDs.substring(4);
+            String file = download.split("/")[1];
             if (fileID.startsWith("0")) {
-                fileID = download.substring(5);
+                fileID = IDs.substring(5);
                 if (fileID.startsWith("0")) {
-                    fileID = download.substring(6);
+                    fileID = IDs.substring(6);
                 }
             }
-            this.download = "https://media.forgecdn.net/files/" + modID + "/" + fileID + "/" + URLEncoder.encode(filename.replace("+", " "), StandardCharsets.UTF_8);
+            try {
+
+                return "https://media.forgecdn.net/files/" + modID + "/" + fileID + "/" + URLEncoder.encode(file.replace("+", " "), "UTF-8");//StandardCharsets.UTF_8);
+            } catch (UnsupportedEncodingException e) {
+                e.printStackTrace();
+            }
             System.out.println(this.download);
         } else {
-            this.download = download;
+            return download;
         }
+        return null;
     }
 }
